# Prehistorian

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.prehistorian/: model.joblib
prehistorian/: cli.py  git_parser.py  math_engine.py  models.py
prehistorian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli_smoke.py
