[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prehistorian"
version = "0.1.0"
description = "A predictive codebase cartographer using Git history"
authors = [{ name = "Copilot" }]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "mlxtend>=0.22.0",
    "joblib>=1.2.0"
]

[project.scripts]
prehistorian = "prehistorian.cli:app"
