[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prehistorian"
version = "1.1.1"
description = "A predictive codebase cartographer using Git history"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "fahiiim" }]
requires-python = ">=3.9"
keywords = ["git", "analytics", "mining", "dependency", "cli", "codebase", "history"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "mlxtend>=0.22.0",
    "joblib>=1.2.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/fahiiim/prehistorian"
Repository = "https://github.com/fahiiim/prehistorian"
Issues = "https://github.com/fahiiim/prehistorian/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.scripts]
prehistorian = "prehistorian.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["prehistorian*"]
